--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^5.1.3",
     "gsap": "npm:@gsap/member@^3.10.4",
     "next": "12.2.2",
+    "next-auth": "^4.10.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.2"
