--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.9.3",
-    "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.0",
+    "@mui/styled-engine-sc": "^5.8.0",
     "@reduxjs/toolkit": "^1.8.3",
     "bootstrap": "^5.1.3",
     "gsap": "npm:@gsap/member@^3.10.4",
@@ -20,7 +19,8 @@
     "next-auth": "^4.10.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-redux": "^8.0.2"
+    "react-redux": "^8.0.2",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@types/node": "^18.0.4",
