--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.0",
     "@mui/styled-engine-sc": "^5.8.0",
@@ -19,6 +21,7 @@
     "next-auth": "^4.10.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-jss": "^10.9.0",
     "react-redux": "^8.0.2",
     "styled-components": "^5.3.5"
   },
