--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.8.3",
     "@mui/material": "^5.8.3",
+    "@prisma/client": "^4.0.0",
     "@reduxjs/toolkit": "^1.8.3",
     "gsap": "file:gsap-bonus.tgz",
     "next": "12.2.2",
@@ -23,10 +27,12 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.3.0",
     "@types/node": "^18.0.4",
     "@types/react": "^18.0.15",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.2",
+    "prisma": "^4.0.0",
     "typescript": "^4.7.4"
   }
 }
