--- a/.env
+++ b/.env
@@ -10,3 +10,4 @@ DATABASE_URL="postgres://qgdfimwuunutsf:0816f57f950eb9db304296acc713484048e6aced
 
 AUTH_SECRET="secret"
 NEXTAUTH_URL="http://localhost:3000"
+BASE_URL="https://elevated-design-ql3wkfxyp-the-orange-dot.vercel.app/"
