--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next-auth": "^4.10.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-number-format": "^4.9.3",
     "react-redux": "^8.0.2",
     "styled-components": "^5.3.5"
   },
