--- a/.env
+++ b/.env
@@ -11,3 +11,7 @@ DATABASE_URL="postgres://qgdfimwuunutsf:0816f57f950eb9db304296acc713484048e6aced
 AUTH_SECRET="secret"
 NEXTAUTH_URL="http://localhost:3000"
 BASE_URL="https://elevated-design.vercel.app/"
+
+SQUARE_ID="sandbox-sq0idb--APsYm8X4YOy_dRcjqXXUQ"
+SQUARE_ACCESS_TOKEN="EAAAEIdpGAQU3V9cyqiY4G4pDRPJTLFOBMm60Zfgb9GH-uMb1OSlQe1oJOYxjOKP"
+SQUARE_LOCATION_ID="LKZ8E3P2ESWK6"
