--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "18.2.0",
     "react-number-format": "^4.9.3",
     "react-redux": "^8.0.2",
+    "square": "^19.1.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
